tests/ui/repr/issue-83505-repr-simd.stderr
error: free static item without body
  --> $DIR/issue-83505-repr-simd.rs:11:1
   |
LL | static CLs: Es;
   | ^^^^^^^^^^^^^^-
   |               |
   |               help: provide a definition for the static: `= <expr>;`

error[E0658]: SIMD types are experimental and possibly buggy
  --> $DIR/issue-83505-repr-simd.rs:5:1
   |
LL | #[repr(simd)]
   | ^^^^^^^^^^^^^
   |
   = note: see issue #27731 <https://github.com/rust-lang/rust/issues/27731> for more information
   = help: add `#![feature(repr_simd)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0517]: attribute should be applied to a struct
  --> $DIR/issue-83505-repr-simd.rs:5:8
   |
LL | #[repr(simd)]
   |        ^^^^
...
LL | enum Es {}
   | ---------- not a struct

error[E0084]: unsupported representation for zero-variant enum
  --> $DIR/issue-83505-repr-simd.rs:5:8
   |
LL | #[repr(simd)]
   |        ^^^^
...
LL | enum Es {}
   | ------- zero-variant enum

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0084, E0517, E0658.
For more information about an error, try `rustc --explain E0084`.
